# property-voice-assistant

./: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml  requirements.txt  start_agent.py
data/: README.md  properties.json
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/token/: route.ts
src/ivy_homes_agent/: __init__.py  agent.py  property_service.py
